--- a/webapp/css/ownSession.css
+++ b/webapp/css/ownSession.css
@@ -1,18 +1,18 @@
 .ssmsYellowFontEva {
-    color:yellow !important;
+    color: yellow !important;
 }
-
 .ssmsRedFontEva {
-    color:red !important;
+    color: red !important;
 }
-
 .ssmsGreenFontEva {
-    color:green !important;
+    color: green !important;
 }
-
 .ssmsGrayFontEva {
-    color:gray !important;
+    color: gray !important;
 }
 .sapMITBAll .sapMITBCount {
-    font-size: 2.5rem !important;
+    font-size: 2.5rem ;
+}
+.sapMITBAll .sapMITBText{
+    padding-top: 1rem;
 }
