modify the display of owner

--- a/webapp/view/SessionDetail.view.xml
+++ b/webapp/view/SessionDetail.view.xml
@@ -29,7 +29,7 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Text text="{UserModel>/displayName}"/>
+											<Text text="{OwnerModel>/firstName} {OwnerModel>/lastName} ({OwnerModel>/name})"/>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_CATEGORY}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
@@ -114,7 +114,7 @@
 													<l:GridData span="L2 M2 S4"/>
 												</layoutData>
 											</Label>
-											<Text text="{UserModel>/displayName}"/>
+											<Text text="{OwnerModel>/firstName} {OwnerModel>/lastName} ({OwnerModel>/name})"/>
 											<Label text="{i18n>OBJECTPAGESECTION_SESSIONDETAIL_CATEGORY}:">
 												<layoutData>
 													<l:GridData span="L2 M2 S4"/>
