1. add visibility formatter for both readIcon and unreadIcon 2. add button in Home Page

--- a/webapp/view/Header.fragment.xml
+++ b/webapp/view/Header.fragment.xml
@@ -5,9 +5,11 @@
 		<ToolbarSpacer/>
 		<SearchField class="ssmsSearchField sapUiSmallMarginEnd" width="20%" placeholder="{i18n>TEXT_HEADERFRAGMENT_SEARCHPLACEHODER}"
 			search="onHeaderSearch"/>
-		<Button class="ssmsEmphasizedButton ssmsNotification" type="Emphasized" icon="img/notification.png" visible="{path: 'UserModel>/notificationUnread', formatter: '.formatter.getUnreadIconVisibility'}"
+		<Button class="ssmsEmphasizedButton ssmsNotification" type="Emphasized" icon="img/notification.png"
+			visible="{path: 'UserModel>/notificationUnread', formatter: '.formatter.getReadIconVisibility'}"
 			tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONTOOLTIP}" press="onPressNotification"/>
 		<Button class="ssmsEmphasizedButton ssmsNotification-Unread" type="Emphasized" icon="img/notification-unread.png"
+			visible="{path: 'UserModel>/notificationUnread', formatter: '.formatter.getUnreadIconVisibility'}"
 			tooltip="{i18n>TEXT_HEADERFRAGMENT_NOTIFICATIONUNREADTOOLTIP}" press="onPressNotification"/>
 		<Button class="ssmsEmphasizedButton" type="Emphasized" icon="sap-icon://add-coursebook"
 			tooltip="{i18n>TEXT_HEADERFRAGMENT_NEWSESSIONTOOLTIP}" press="onPressNewSession"/>
