Notification Page development

--- a/webapp/view/NotificationList.view.xml
+++ b/webapp/view/NotificationList.view.xml
@@ -1,11 +1,35 @@
 <mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="ssms.controller.NotificationList"
-	xmlns:f="sap.ui.layout.form" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:l="sap.ui.layout">
+	xmlns:f="sap.ui.layout.form" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:l="sap.ui.layout" xmlns:ssms="ssms.control.notificationListItem">
 	<Page showHeader="false">
 		<subHeader>
 			<core:Fragment fragmentName="ssms.view.Header" type="XML"/>
 		</subHeader>
 		<content>
-			
+			<SplitContainer id="notificationSplitCont">
+				<detailPages id="notificationDetail">
+					<Page>
+						<content>
+							<List id="notificationList" items="{NotificationModel>/}">
+								<ssms:notificationListItem  title="Notice" description="{NotificationModel>content}"
+									class="ssmsNotificationDetail" priority="{path: 'NotificationModel>checked',formatter:'.formatter.formatRead'}" close="onPressClose" press="onListitemPress"/>
+							</List>
+						</content>
+					</Page>
+				</detailPages>
+				<masterPages id="notificationMaster">
+					<Page>
+						<content>
+							<List>
+								<items>
+									<StandardListItem title="All" id="notificationAll" press="onPrssToAllNotices" counter="1" type="Active" 
+										class="ssmsNotificationMaster"/>
+									<StandardListItem title="Unread" id="notificationUnread" press="onPressToUnreadNotices" type="Active" counter="1" class="ssmsNotificationMaster"/>
+								</items>
+							</List>
+						</content>
+					</Page>
+				</masterPages>
+			</SplitContainer>
 		</content>
 	</Page>
 </mvc:View>
