--- a/webapp/view/Header.fragment.xml
+++ b/webapp/view/Header.fragment.xml
@@ -1,4 +1,4 @@
-<core:FragmentDefinition xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:ssmsLogo="ssms.control.logo" controllerName="ssms.controller.Header">
+<core:FragmentDefinition xmlns="sap.m" xmlns:core="sap.ui.core" xmlns:ssmsLogo="ssms.control.logo">
 	<Toolbar class="ssmsHeader" design="Transparent">
 		<Image tooltip="{i18n>TEXT_HEADERFRAGMENT_LOGOTOOLTIP}" class="sapUiSmallMarginTop sapUiSmallMarginBottom sapUiMediumMarginBegin"
 			src="img/logo_small.png" press="onPressLogo"/>
